// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationControlButton renders correctly when variant is "next" and it is disabled 1`] = `
<div>
  <span
    class=""
    title="No next page"
  >
     
    <button
      class="MuiButtonBase-root MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        NavigateNextRoundedIcon Mock
      </span>
    </button>
  </span>
</div>
`;

exports[`PaginationControlButton renders correctly when variant is "next" and it is not disabled 1`] = `
<div>
  <span
    class=""
    title="Next page"
  >
     
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        NavigateNextRoundedIcon Mock
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </span>
</div>
`;

exports[`PaginationControlButton renders correctly when variant is "previous" and it is disabled 1`] = `
<div>
  <span
    class=""
    title="No previous page"
  >
     
    <button
      class="MuiButtonBase-root MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        NavigateBeforeRoundedIcon Mock
      </span>
    </button>
  </span>
</div>
`;

exports[`PaginationControlButton renders correctly when variant is "previous" and it is not disabled 1`] = `
<div>
  <span
    class=""
    title="Previous page"
  >
     
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        NavigateBeforeRoundedIcon Mock
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </span>
</div>
`;
